<resources>
    <string name="app_name">DemoOnSchool</string>
    <string name="enter_rows">Enter Rows</string>
    <string name="enter_cols">Enter Cols</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
    <string name="congratulation">Congratulation!</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="warningMessage">The value of rows and columns\n must be larger than zero</string>
    <string name="invalid_input">Invalid Input</string>
</resources>