<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/messageWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_input"
        android:textSize="35sp"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/warningDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warningMessage"
        android:textSize="20sp"
        android:textColor="#090909"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:lines="2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCloseWarning"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/blank"
        android:text="@string/close"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>
</LinearLayout>